k8s/policies/disallow-privileged.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privileged
spec:
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
  matchConditions:
    - name: supply-chain-namespace
      expression: "object.metadata.namespace == 'supply-chain'"
  validationActions:
    - Deny
  variables:
    - name: containers
      expression: >-
        object.spec.containers
        + object.spec.?initContainers.orValue([])
        + object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        variables.containers.all(c,
          !c.?securityContext.?privileged.orValue(false)
        )
      message: "Privileged containers are not allowed."
