k8s/policies/require-non-root.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-non-root
spec:
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
  matchConditions:
    - name: supply-chain-namespace
      expression: "object.metadata.namespace == 'supply-chain'"
  validationActions:
    - Deny
  variables:
    - name: containers
      expression: >-
        object.spec.containers
        + object.spec.?initContainers.orValue([])
        + object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        variables.containers.all(c,
          c.?securityContext.?runAsNonRoot.orValue(false)
          && c.?securityContext.?runAsUser.orValue(0) != 0
        )
      message: "Containers must explicitly run as a non-root user."
